# air-quality-izmir

./: .env.coolify.example  .env.local.example  .envrc.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml  tech-debt.md
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: analytics-engineer.md  coolify-engineer.md  data-engineer.md  data-quality-engineer.md  database-architect.md  devops-engineer.md  ml-engineer.md  security-compliance.md  spark-engineer.md  tech-lead.md  technical-writer.md
.claude/commands/: agent-handoff.md  coolify-provision.md  coolify-status.md  coolify-sync-secrets.md  progress-report.md  quality-gate.md  sprint-review.md  sprint-start.md
.devcontainer/: devcontainer.json  post-create.sh
config/: stations.yaml
docs/: ASSUMPTIONS.md  MIMARI.md  PROJE_PLANI.md  RAPOR_H8.md  RAPOR_SABLONU.md  claude-code-multi-agent-kickoff.md
docs/sprints/: sprint-03-demo.md  sprint-03-review-prompt.md  sprint-03-security-audit.md  sprint-03.md  sprint-04-perf.md  sprint-04-security-audit.md  sprint-04.md
infra/: .dockerignore  Dockerfile.ingestion  Dockerfile.migrate  Dockerfile.streamlit  docker-compose.coolify.yml  docker-compose.local.yml
infra/coolify/: README.md  __init__.py  client.py  config.yaml  provision.py  sync_secrets.py
infra/grafana/dashboards/: .gitkeep
infra/grafana/provisioning/: dashboards.yml  datasources.yml
infra/migrations/: 0001_baseline.sql  0002_star_schema_expand.down.sql  0002_star_schema_expand.sql  0003_partition_and_indexes.down.sql  0003_partition_and_indexes.sql  0004_views_and_audit.down.sql  0004_views_and_audit.sql  __init__.py  run.py
infra/postgres/: __init__.py  init.sql  seed_dim_station.py
src/: __init__.py
src/config/: settings.py
src/ingestion/: __init__.py  api_collector.py  csv_loader.py  kafka_producer.py  main.py  stations.py
src/presentation/: __init__.py
src/presentation/streamlit/: __init__.py  app.py
src/processing/: __init__.py  aqi_calculator.py  spark_batch.py  spark_streaming.py
src/quality/: __init__.py  data_quality.py
src/storage/: __init__.py  db_writer.py  schema.sql
tests/: conftest.py  test_settings.py
tests/infra/: test_migration_0003.py  test_migration_0004.py  test_migration_runner.py  test_seed_dim_station.py
tests/ingestion/: test_api_collector.py  test_contracts.py  test_csv_loader.py  test_kafka_producer.py  test_main.py  test_stations.py
tests/ingestion/fixtures/: izmir_sample_utf8.csv
tests/integration/: __init__.py  conftest.py  test_load_performance.py  test_schema_apply.py
tests/storage/: test_schema.py
