[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-izmir"
version = "0.1.0"
description = "YZM536 — Gerçek Zamanlı İzmir Hava Kalitesi İzleme (Kafka+Spark+PostgreSQL pipeline)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "YZM536 Project" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
ingestion = [
    "confluent-kafka>=2.5",
    "APScheduler>=3.10",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
]
processing = [
    "pyspark==3.5.1",
    "psycopg[binary]>=3.2",
]
streamlit = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
]
ml = [
    "prophet>=1.1.5",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "joblib>=1.4",
]
coolify = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.11",
    "black>=24.8",
    "pre-commit>=3.8",
    "detect-secrets>=1.5",
    "types-PyYAML>=6.0",
    "types-python-dateutil>=2.9",
]
all = [
    "air-quality-izmir[ingestion,processing,streamlit,ml,coolify,dev]",
]

[project.urls]
Documentation = "./docs/MIMARI.md"

# =============================================================================
# Setuptools package discovery
# =============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "infra*"]
exclude = ["tests*", "docs*"]

# =============================================================================
# Ruff — lint + format
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data/", "backups/", "spark-warehouse/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",    # line-too-long — handled by formatter
    "B008",    # function calls in defaults (FastAPI/pytest Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "N802"]
"src/storage/schema.sql" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# mypy — strict type checking
# =============================================================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "confluent_kafka.*",
    "prophet.*",
    "lightgbm.*",
    "plotly.*",
    "apscheduler.*",
]
ignore_missing_imports = true

# =============================================================================
# pytest
# =============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: tests that take more than ~1s (Spark cold-start, integration)",
    "integration: tests requiring live services (DB, Kafka)",
    "e2e: full pipeline end-to-end tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/**/__init__.py",
    "src/presentation/streamlit/**",  # Streamlit harder to unit-test
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 60  # start lenient; raise to 80 by Hafta 12
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Black (compatibility — ruff format is primary)
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
